[DONE] moving alert already exists on creation of new mapping to separate component

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -116,9 +116,13 @@
   "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Hab' mich geirrt",
   "MAIN_MAPPINGS_TT_MAP_DETAILS": "Details in obiger Tabelle anzeigen",
   "MAIN_MAPPINGS_NEW_ND": "Neues Mapping: Knoten diskret",
+  "MAIN_MAPPINGS_EDIT_ND": "Mapping bearbeiten: Knoten diskret",
   "MAIN_MAPPINGS_NEW_NC": "Neues Mapping: Knoten kontinuierlich",
+  "MAIN_MAPPINGS_EDIT_NC": "Mapping bearbeiten: Knoten kontinuierlich",
   "MAIN_MAPPINGS_NEW_ED": "Neues Mapping: Kanten diskret",
+  "MAIN_MAPPINGS_EDIT_ED": "Mapping bearbeiten: Kanten diskret",
   "MAIN_MAPPINGS_NEW_EC": "Neues Mapping: Kanten kontinuierlich",
+  "MAIN_MAPPINGS_EDIT_EC": "Mapping bearbeiten: Kanten kontinuierlich",
   "MAIN_MAPPINGS_NEW_TYPE_ND": "Knoten - diskret",
   "MAIN_MAPPINGS_NEW_TYPE_NC": "Knoten - kontinuierlich",
   "MAIN_MAPPINGS_NEW_TYPE_ED": "Kanten - diskret",
