--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,9 +116,13 @@
   "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Never mind",
   "MAIN_MAPPINGS_TT_MAP_DETAILS": "Show details in table above",
   "MAIN_MAPPINGS_NEW_ND": "New Mapping: Nodes discrete",
+  "MAIN_MAPPINGS_EDIT_ND": "Edit Mapping: Nodes discrete",
   "MAIN_MAPPINGS_NEW_NC": "New Mapping: Nodes continuous",
+  "MAIN_MAPPINGS_EDIT_NC": "Edit Mapping: Nodes continuous",
   "MAIN_MAPPINGS_NEW_ED": "New Mapping: Edges discrete",
+  "MAIN_MAPPINGS_EDIT_ED": "Edit Mapping: Edges discrete",
   "MAIN_MAPPINGS_NEW_EC": "New Mapping: Edges continuous",
+  "MAIN_MAPPINGS_EDIT_EC": "Edit Mapping: Edges continuous",
   "MAIN_MAPPINGS_NEW_TYPE_ND": "Nodes - discrete",
   "MAIN_MAPPINGS_NEW_TYPE_NC": "Nodes - continuous",
   "MAIN_MAPPINGS_NEW_TYPE_ED": "Edges - discrete",
