--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -144,10 +144,11 @@
   "MAIN_MAPPINGS_NEW_ALREADY_EXISTS": "A mapping for this attribute-css-combination already exists",
   "MAIN_MAPPINGS_NEW_EDIT_INSTEAD": "Creating a second one is usually a bad idea. Do you want to edit the existing one?",
   "MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD": "Edit existing mapping",
-  "MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING": "Default values are your friends!",
-  "MAIN_MAPPINGS_NEW_DEFAULT_HINT": "Though they don't impact your imminent mapping, default values are essential if you are making changes to your graph later on, e.g. add nodes or edges. It is recommended that the complete range of your selected attribute is covered not be relying on default values.",
-  "MAIN_MAPPINGS_NEW_CURRENT_MIN": "Current minimum (recommended threshold#1)",
-  "MAIN_MAPPINGS_NEW_CURRENT_MAX": "Current maximum (recommended threshold#2)",
+
+  "MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING": "Continuous mappings are tricky!",
+  "MAIN_MAPPINGS_NEW_DEFAULT_HINT_1": "Dont't let default values confuse you. They are needed for the NDEx data model, but they don't impact your mapping directly.",
+  "MAIN_MAPPINGS_NEW_DEFAULT_HINT_2": "To define a consistent mapping it's recommended to set values for your attribute's minimum and maximum. You can find them as grey fields in the form below.",
+  "MAIN_MAPPINGS_NEW_DEFAULT_HINT_3": "Check out the histogram to inspect your data. There are buttons that let you change the bin size.",
   "SIDEBAR_COMPARE_TITLE": "Compare two networks",
   "SIDEBAR_COMPARE_ABOUT": "About NDExEdit",
   "SIDEBAR_COMPARE_ABOUT_1": "Do you like this app? There's a lot more to come!",
