--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
   "MAIN_INFO_STEPS_STEP_3": "Inspect the information displayed to this specific network by clicking on the i-Icon right next to the networks name",
   "MAIN_INFO_STEPS_STEP_4": "Click on \"Edit\" to manipulate how the graph is displayed",
   "MAIN_INFO_STEPS_STEP_5": "You can download the adapted graph as .cx file",
+  "MAIN_INFO_TT_FLIP": "Switch main and side view",
   "MAIN_INFO_LAYOUT_TITLE": "Page layout",
   "MAIN_INFO_LAYOUT_DESCRIPTION": "To modify the proportion of main view and sidebar click the bar between the two:",
   "MAIN_INFO_LAYOUT_STEP_1": "<code>Left click</code> increases the sidebar",
