[DONE] reworked page layout and refined switching main and sidebar view

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -16,10 +16,10 @@
   "MAIN_INFO_STEPS_STEP_5": "Den veränderten Graphen kannst du als .cx Datei runterladen",
   "MAIN_INFO_TT_FLIP": "Haupt- und Seitenansicht tauschen",
   "MAIN_INFO_LAYOUT_TITLE": "Seitenverhältnis",
-  "MAIN_INFO_LAYOUT_DESCRIPTION": "Um das Seitenverhältnis der Anwendung zu manipulieren, auf den vertikalen Balken zwischen Haupt- und Zweitansicht klicken:",
-  "MAIN_INFO_LAYOUT_STEP_1": "<code>Linksklick</code> vergrößert die rechte Seite",
-  "MAIN_INFO_LAYOUT_STEP_2": "<code>Rechtsklick</code> vergrößert die Hauptansicht",
-  "MAIN_INFO_LAYOUT_STEP_3": "<code>Strg</code> + <code>Linksklick</code> setzt das Verhältnis zurück auf das Standardverhältnis",
+  "MAIN_INFO_LAYOUT_DESCRIPTION": "Um das Seitenverhältnis der Anwendung zu manipulieren, sind in der grauen Leiste Buttons versteckt.",
+  "MAIN_INFO_LAYOUT_STEP_1": "Klick auf einen der Pfeile ändert das Seitenverhältnis",
+  "MAIN_INFO_LAYOUT_STEP_2": "Klick auf Zurücksetzen stellt das Standard-Seitenverhältnis wieder her",
+  "MAIN_INFO_LAYOUT_STEP_3": "Klick auf den gelben Button vertauscht die Haupt- und Seitenansicht",
   "MAIN_STATS_TITLE": "Daten",
   "MAIN_STATS_GRAPH_INFO_TITLE": "Über Graph",
   "MAIN_STATS_GRAPH_INFO_NODES": "(#) Knoten",
