--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,10 +16,10 @@
   "MAIN_INFO_STEPS_STEP_5": "You can download the adapted graph as .cx file",
   "MAIN_INFO_TT_FLIP": "Switch main and side view",
   "MAIN_INFO_LAYOUT_TITLE": "Page layout",
-  "MAIN_INFO_LAYOUT_DESCRIPTION": "To modify the proportion of main view and sidebar click the bar between the two:",
-  "MAIN_INFO_LAYOUT_STEP_1": "<code>Left click</code> increases the sidebar",
-  "MAIN_INFO_LAYOUT_STEP_2": "<code>Right click</code> increases the main view",
-  "MAIN_INFO_LAYOUT_STEP_3": "<code>Ctrl</code> + <code>Left click</code> resets the proportion to default",
+  "MAIN_INFO_LAYOUT_DESCRIPTION": "To modify the proportion of main view and sidebar there are some buttons hidden within the grey vertical bar:",
+  "MAIN_INFO_LAYOUT_STEP_1": "Arrow buttons change the proportion",
+  "MAIN_INFO_LAYOUT_STEP_2": "Reset button sets the proportion back to default",
+  "MAIN_INFO_LAYOUT_STEP_3": "Yellow button switches main view and sidebar",
   "MAIN_STATS_TITLE": "Statistics",
   "MAIN_STATS_GRAPH_INFO_TITLE": "Info about",
   "MAIN_STATS_GRAPH_INFO_NODES": "(#) Nodes",
