[WIP] spacing and cleanup

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
   "NAV_EDIT_TT_INFO": "Please select a network",
   "MAIN_INFO_TITLE": "General info & First Steps",
   "MAIN_INFO_DOCUMENTATION_TITLE": "Documentation",
-  "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "The documentation to this application is available as a separate .zip file delived with the release. You can run the <code>index.html</code> to read up on the code.",
+  "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "The documentation to this application is available as a separate .zip file delivered with the release. You can run the <code>index.html</code> to read up on the code.",
   "MAIN_INFO_STEPS_TITLE": "First steps",
   "MAIN_INFO_STEPS_DESCRIPTION": "If you never worked with NDExEdit before, here are a few first steps you might want to try out:",
   "MAIN_INFO_STEPS_STEP_1": "Visit the NDExBIO Website and select a network you would like to edit visually",
