[WIP] small improvements to stats cmp and sidebar-edit; next up extracting attribute infos while parsing

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -21,6 +21,7 @@
   "MAIN_INFO_LAYOUT_STEP_2": "Klick auf Zurücksetzen stellt das Standard-Seitenverhältnis wieder her",
   "MAIN_INFO_LAYOUT_STEP_3": "Klick auf den gelben Button vertauscht die Haupt- und Seitenansicht",
   "MAIN_STATS_TITLE": "Daten",
+  "MAIN_STATS_NO_DESCRIPTION": "Keine Beschreibung verfügbar",
   "MAIN_STATS_GRAPH_INFO_TITLE": "Über Graph",
   "MAIN_STATS_GRAPH_INFO_NODES": "(#) Knoten",
   "MAIN_STATS_GRAPH_INFO_EDGES": "(#) Kanten",
@@ -64,9 +65,8 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Knoten",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Kanten",
   "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Beschreibung",
-  "SIDEBAR_EDIT_EDITING_TITLE": "Knoten und Kanten highlighten",
-  "SIDEBAR_EDIT_STYLE_TITLE": "Angewandte Styles",
-  "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Aspekte",
+  "SIDEBAR_EDIT_INSPECT_TITLE": "Netzwerk untersuchen",
+  "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Klassenname",
   "SIDEBAR_EDIT_TH_CSS_KEY": "CSS-Key",
   "SIDEBAR_EDIT_TH_CSS_VALUE": "CSS-Value",
