--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,6 +21,7 @@
   "MAIN_INFO_LAYOUT_STEP_2": "Reset button sets the proportion back to default",
   "MAIN_INFO_LAYOUT_STEP_3": "Yellow button switches main view and sidebar",
   "MAIN_STATS_TITLE": "Statistics",
+  "MAIN_STATS_NO_DESCRIPTION": "No description found",
   "MAIN_STATS_GRAPH_INFO_TITLE": "Info about",
   "MAIN_STATS_GRAPH_INFO_NODES": "(#) Nodes",
   "MAIN_STATS_GRAPH_INFO_EDGES": "(#) Edges",
@@ -64,9 +65,8 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Nodes",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Edges",
   "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Description",
-  "SIDEBAR_EDIT_EDITING_TITLE": "Highlight nodes and edges",
-  "SIDEBAR_EDIT_STYLE_TITLE": "Applied styles",
-  "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Aspects",
+  "SIDEBAR_EDIT_INSPECT_TITLE": "Inspect network",
+  "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Class name",
   "SIDEBAR_EDIT_TH_CSS_KEY": "CSS key",
   "SIDEBAR_EDIT_TH_CSS_VALUE": "CSS value",
