[FIX] sidebar manage did awkwardly scroll horizontally, does not do that now

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -104,7 +104,7 @@
   "MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS": "Kontinuierliche Kantenmappings",
   "MAIN_MAPPINGS_MAPPED_BY": "verändert in Abhängigkeit von",
   "MAIN_MAPPINGS_NEW": "Neu",
-  "MAIN_MAPPINGS_TITLE_LIST": "Liste aller Mappings",
+  "MAIN_MAPPINGS_TITLE_LIST": "Attribute geeignet für Mappings",
   "MAIN_MAPPINGS_DETAILS": "Details",
   "MAIN_MAPPINGS_TT_EDIT": "Dieses Mapping bearbeiten",
   "MAIN_MAPPINGS_TT_SINGLE_EDIT": "Diesen Eintrag bearbeiten",
