--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,7 +104,7 @@
   "MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS": "Continuous edge mappings",
   "MAIN_MAPPINGS_MAPPED_BY": "mapped by",
   "MAIN_MAPPINGS_NEW": "New",
-  "MAIN_MAPPINGS_TITLE_LIST": "Existing mappings",
+  "MAIN_MAPPINGS_TITLE_LIST": "Attributes available for mappings",
   "MAIN_MAPPINGS_DETAILS": "Details",
   "MAIN_MAPPINGS_TT_EDIT": "Edit this mapping",
   "MAIN_MAPPINGS_TT_SINGLE_EDIT": "Edit this line",
