[WIP] improved stats component, now also contains histograms, still bugged (bait_boolean), needs binSize changer, then probably moving on to creating new mappings and editing existing mappings

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -32,8 +32,10 @@
   "MAIN_STATS_GRAPH_INFO_NW_DESCRIPTION": "Beschreibung",
   "MAIN_STATS_BTN_RENDER": "Rendern und bearbeiten",
   "MAIN_STATS_BTN_COMPARE": "Vergleichen",
-  "MAIN_STATS_GRAPH_ATTRIBUTES_EDGES_TITLE": "Vorhandene Kantenattribute",
-  "MAIN_STATS_GRAPH_ATTRIBUTES_NODES_TITLE": "Vorhandene Knotenattribute",
+  "MAIN_STATS_GRAPH_ATTRIBUTES_TITLE": "Verfügbare Attribute",
+  "MAIN_STATS_DISTRIBUTION_TITLE": "Verteilung",
+  "MAIN_STATS_COVERAGE_TITLE": "Überdeckung",
+  "MAIN_STATS_COVERAGE_HINT": "Dieser Balken zeigt an, wie viele Knoten bzw. Kanten dieses Attribut tatsächlich besitzen. Das soll dir helfen, den Verteilungsgraphen oben besser einschätzen zu können.",
   "MAIN_STATS_TT_EDIT": "Dieses Netzwerk rendern und bearbeiten",
   "MAIN_STATS_TT_COMPARE": "Dieses Netzwerk zu einem weiteren Netzwerk vergleichen",
   "MAIN_GRAPH_TITLE": "Graph",
