[WIP] passthrough mappings displayed in sidebar, mapping details and as property list. still unsure, because 'name' does not appear as nodeAttribute, nevertheless used as passthrough mapping...

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -101,14 +101,20 @@
   "SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE": "Kante hervorheben | ID:",
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Neue Mappings anlegen und existierende Mappings verwalten",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Mappings anlegen und verwalten",
+  "SIDEBAR_EDIT_TT_PASSTHROUGH": "Ein Passthrough-Mapping schleust die Werte der Spalte (links) einfach durch bis zum spezifizierten Style-Attribut (rechts)",
+  "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
+  "MAIN_MAPPINGS_TH_STYLE": "Zugewiesener Style",
   "MAIN_MAPPINGS_GRAPH": "Zurück zum Graph",
   "MAIN_MAPPINGS_TITLE_NODES_DISCRETE": "Diskrete Knotenmappings",
   "MAIN_MAPPINGS_TITLE_NODES_CONTINUOUS": "Kontinuierliche Knotenmappings",
   "MAIN_MAPPINGS_TITLE_EDGES_DISCRETE": "Discrete Kantenmappings",
   "MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS": "Kontinuierliche Kantenmappings",
+  "MAIN_MAPPINGS_TITLE_NODES_PASSTHROUGH": "Passthrough Knotenmappings",
+  "MAIN_MAPPINGS_TITLE_EDGES_PASSTHROUGH": "Passthrough Kantenmappings",
   "MAIN_MAPPINGS_MAPPED_BY": "verändert in Abhängigkeit von",
   "MAIN_MAPPINGS_NEW": "Neu",
   "MAIN_MAPPINGS_TITLE_LIST": "Attribute geeignet für Mappings",
+  "MAIN_MAPPINGS_TITLE_PASSTHROUGH": "Attribute für passthrough-Mappings",
   "MAIN_MAPPINGS_DETAILS": "Details",
   "MAIN_MAPPINGS_TT_EDIT": "Dieses Mapping bearbeiten",
   "MAIN_MAPPINGS_TT_SINGLE_EDIT": "Diesen Eintrag bearbeiten",
