--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -101,14 +101,20 @@
   "SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE": "Highlight edge",
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Manage existing mappings and create new ones",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Create and manage mappings",
+  "SIDEBAR_EDIT_TT_PASSTHROUGH": "A passthrough mapping simply applies values from the data column (left) on the style property (right)",
+  "MAIN_MAPPINGS_TH_COL": "Data column",
+  "MAIN_MAPPINGS_TH_STYLE": "Applied style",
   "MAIN_MAPPINGS_GRAPH": "Return to graph",
   "MAIN_MAPPINGS_TITLE_NODES_DISCRETE": "Discrete node mappings",
   "MAIN_MAPPINGS_TITLE_NODES_CONTINUOUS": "Continuous node mappings",
   "MAIN_MAPPINGS_TITLE_EDGES_DISCRETE": "Discrete edge mappings",
   "MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS": "Continuous edge mappings",
+  "MAIN_MAPPINGS_TITLE_NODES_PASSTHROUGH": "Passthrough node mappings",
+  "MAIN_MAPPINGS_TITLE_EDGES_PASSTHROUGH": "Passthrough edge mappings",
   "MAIN_MAPPINGS_MAPPED_BY": "mapped by",
   "MAIN_MAPPINGS_NEW": "New",
   "MAIN_MAPPINGS_TITLE_LIST": "Attributes available for mappings",
+  "MAIN_MAPPINGS_TITLE_PASSTHROUGH": "Attributes for passthrough mappings",
   "MAIN_MAPPINGS_DETAILS": "Details",
   "MAIN_MAPPINGS_TT_EDIT": "Edit this mapping",
   "MAIN_MAPPINGS_TT_SINGLE_EDIT": "Edit this line",
