--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -39,6 +39,7 @@
   "MAIN_STATS_TT_EDIT": "Dieses Netzwerk rendern und bearbeiten",
   "MAIN_STATS_TT_COMPARE": "Dieses Netzwerk zu einem weiteren Netzwerk vergleichen",
   "MAIN_STATS_AXIS_BINS": "Klassen, je zwischen [untereGrenze:obereGrenze]",
+  "MAIN_STATS_AXIS_NAMES": "Mögliche Ausprägungen",
   "MAIN_STATS_AXIS_OCCURANCES": "Anzahl Elemente des Attributs ",
   "MAIN_GRAPH_TITLE": "Graph",
   "MAIN_GRAPH_TT_FIT": "Graph an die Größe des Fensters anpassen",
